--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ line-height: 48px;
 
 .weather-app-details {
     font-size: 16px;
-    color: rgba(39, 33, 66. 0.4);
+    color: rgba(39, 33, 66, 0.4);
     line-height: 24px;
     font-weight:500;
 }
