--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ line-height: 48px;
     color: #f65282;
 }
 
-    .weather-app-temparature-container {
+    .weather-app-temperature-container {
      display:flex;
 }
 
@@ -69,7 +69,7 @@ line-height: 48px;
     height: 88px;
 }
 
-.weather-app-temparature {
+.weather-app-temperature {
     font-size: 88px;
    line-height: 88px;
     font-weight: bold;
@@ -78,7 +78,38 @@ line-height: 48px;
     .weather-app-unit {
         margin-top: 6px;
         font-size: 28px;
+
     }
+    .weather-forecast {
+        display:flex;
+        justify-content: space-around;
+        margin-top: 30px;
+    }
+.weather-forecast-date {
+    text-align: center;
+    color: rgba (39,33, 66, 0.4);
+    font-size:16px;
+    line-height:20px;
+    margin-bottom: 10px;
+}
+
+.weather-forecast-icon{
+    font-size:38px;
+    text-align: center;
+}
+
+.weather-forecast-temperatures {
+    text-align: center;
+    color: #f65282;
+    margin-top:10px;
+    display: flex;
+    justify-content: center;
+}
+
+.weather-forecast-temperature {
+    padding: 0 10px;
+
+}
 
 footer {
     border-top: 1px solid #f9f7fe;
